# Ananta

./: .gitignore  docker-compose.infra.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: launch.json
.github/workflows/: build-push.yml  terraform.yml  test.yml
app/mobile/: App.tsx  app.json  package.json
app/services/ai-service/: Dockerfile  pyproject.toml  requirements.txt
app/services/ai-service/app/: main.py
app/services/ai-service/app/routers/: extraction.py  health.py  ocr.py
app/services/ai-service/app/services/: extraction_service.py  ocr_service.py
app/services/ai-service/tests/: test_extraction.py  test_health.py  test_ocr.py
app/services/auth-service/: Dockerfile  package.json
app/services/doctor-service/: Dockerfile  package.json
app/services/emergency-service/: Dockerfile  package.json  vitest.config.ts
app/services/patient-service/: Dockerfile  package.json
app/web/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
app/web/src/: middleware.ts
db/mongodb/init/: 01-create-collections.js  02-create-indexes.js
db/postgres/migrations/: 0001_init.sql
db/postgres/seed/: seed.sql
deploy/: .env.example  docker-compose.prod.yml  setup-server.sh  setup-ssl.sh
deploy/nginx/: nginx.conf
deploy/terraform/: main.tf
helm/apps/ai-service/: Chart.yaml  values-dev-ap-south-1.yaml  values-prod-ap-south-1.yaml  (+2 more)
helm/argocd/: appset-dev-ap-south-1.yaml  appset-prod-ap-south-1.yaml  appset-prod-us-east-1.yaml  project.yaml
infra/scripts/: init.sh
(+227 files in other folders)
